# astro-epd-display

./: Cargo.toml  README.md  install.sh
examples/: setup.sh  state.json  template.yaml
mobindi/: scrape.py  scrape.sh  template.yaml
src/: binary_change_tracker.rs  binary_framebuffer.rs  cli.rs  debug.rs  device_driver.rs  epd_driver.rs  error.rs  main.rs  renderer.rs  scraper.rs  state.rs  stdout_driver.rs  templater.rs
src/renderer/: alignment.rs  container.rs  drawing_error.rs  image.rs  positioning.rs  progress.rs  qrcode.rs  text.rs
src/templater/: arithmetic.rs  boolean.rs  logic.rs  numeric.rs  string.rs
systemd/: astro-epd-driver.service  start-epd.sh
