[package]
name = "astro-epd-display"
version = "0.0.1"
edition = "2021"
authors = ["Display interface for EPD"]

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
axum = "0.7.9"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
epd-waveshare = "0.6.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["server", "http1" ] }
hyper-util = { version = "0.1.10", features = ["full"] }
linux-embedded-hal = "0.4.0"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
tokio = { version = "1.42.0", features = ["full"] }
# rpi_embedded = { version = "0.1.0", features = ["embedded-hal"] }


gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
yaml-merge-keys = { version = "0.7.0", features = ["serde_yaml"] }
embedded-graphics-framebuf = "0.5.0"
assert_ok = "1.0.2"
serde_with = "3.11.0"
clap = { version = "4.5.23", features = ["derive"] }
qrcode = "0.14.1"
png = "0.17.16"
